--- a/scss/_buttons.scss
+++ b/scss/_buttons.scss
@@ -1,2 +1,12 @@
 /* =Buttons
 ---------------------------------------*/
+.button {
+    border: none;
+    background-color: $active-regular;
+    padding: 18px 30px;
+    text-align: center;
+    box-shadow: 0 0 20px 0 rgba(36, 163, 255, 0.5);
+    border-radius: 12px;
+    @include fonts(16px, 19px, 700, white, false);
+    font-family: "Montserrat", sans-serif;
+}
