--- a/scss/style.scss
+++ b/scss/style.scss
@@ -24,3 +24,5 @@
 @import "pages/about-us/_about-us_achievements";
 @import "pages/team/_team_team";
 @import "pages/contact/_contact_contacts-and-form";
+@import "pages/team-inner/_team-inner_person";
+@import "pages/publications/_publications_publications";
