--- a/css/style.css
+++ b/css/style.css
@@ -107,7 +107,7 @@ h1 {
   color: white;
 }
 
-.preferences__link, .advantages__title, .slider .slide__quote, .publications__title, .legal-services__title, .quality__title {
+.preferences__link, .advantages__title, .slider .slide__quote, .publications__title, .legal-services__title, .quality__title, .article__attention {
   font-size: 38px;
   line-height: 46px;
   font-weight: 700;
@@ -1608,5 +1608,56 @@ a:hover {
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
+}
+
+.article {
+  padding: 60px 0 60px;
+}
+
+.article__container {
+  width: 1340px;
+}
+
+.article__img {
+  margin-bottom: 30px;
+}
+
+.article__title {
+  margin-bottom: 15px;
+}
+
+.article__date {
+  font-size: 12px;
+  color: #B3B3BA;
+  font-weight: 700;
+  line-height: 15px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+}
+
+.article__body {
+  margin-top: 30px;
+  padding: 30px 0 30px;
+  border-top: 4px solid #E6E6F0;
+  border-bottom: 4px solid #E6E6F0;
+}
+
+.article__text {
+  margin-bottom: 30px;
+}
+
+.article__attention {
+  background: linear-gradient(90.13deg, #F0145A 0.84%, #EF8080 99.96%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  margin-bottom: 30px;
+}
+
+.article__list {
+  counter-reset: num;
+}
+
+.article__title-small {
+  margin-bottom: 15px;
 }
 /*# sourceMappingURL=style.css.map */
