--- a/scss/style.scss
+++ b/scss/style.scss
@@ -26,3 +26,4 @@
 @import "pages/contact/_contact_contacts-and-form";
 @import "pages/team-inner/_team-inner_person";
 @import "pages/publications/_publications_publications";
+@import "pages/publications-inner/_publications-inner_article";
