--- a/scss/pages/publications-inner/_publications-inner_article.scss
+++ b/scss/pages/publications-inner/_publications-inner_article.scss
@@ -18,6 +18,7 @@
         @include main-paddings(30px, 0, 30px);
         border-top: 4px solid $separator;
         border-bottom: 4px solid $separator;
+        margin-bottom: 30px;
     }
     &__text{
         margin-bottom: 30px;
@@ -28,9 +29,41 @@
         margin-bottom: 30px;
     }
     &__list{
-        counter-reset: num;
+        list-style-type: decimal;
+        list-style-position: inside;
+        margin-bottom: 30px;
     }
     &__title-small{
         margin-bottom: 15px;
+    }
+    &__figure{
+        width: 640px;
+        @include center-block;
+        margin-bottom: 30px;
+    }
+    &____figure-img{
+        margin-bottom: 15px;
+    }
+    &__figcaption{
+        @include fonts(14px, 22px, 400, $text, false);
+        text-align: center;
+    }
+    &__socials{
+        display: flex;
+    }
+    &__social-link{
+        display: block;
+        width: 42px;
+        height: 42px;
+        background-color: $bg;
+        border-radius: 12px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-right: 10px;
+    }
+    &__social-svg{
+        width: 24px;
+        height: 24px;
     }
 }
