--- a/scss/style.scss
+++ b/scss/style.scss
@@ -27,3 +27,4 @@
 @import "pages/team-inner/_team-inner_person";
 @import "pages/publications/_publications_publications";
 @import "pages/publications-inner/_publications-inner_article";
+@import "pages/services/_services";
