--- a/scss/style.scss
+++ b/scss/style.scss
@@ -28,3 +28,5 @@
 @import "pages/publications/_publications_publications";
 @import "pages/publications-inner/_publications-inner_article";
 @import "pages/services/_services";
+@import "pages/services-inner/_services-inner_service";
+@import "pages/services-inner/_services-inner_publications";
