--- a/scss/global/_header.scss
+++ b/scss/global/_header.scss
@@ -115,6 +115,10 @@
         &__link--active{
             color: $accent;
         }
+        &__link--active::after{
+            opacity: 1;
+            background-color: $accent;
+        }
     }
 }
 .main-header--white{
