--- a/scss/pages/about-us/_about-us_achievements.scss
+++ b/scss/pages/about-us/_about-us_achievements.scss
@@ -26,7 +26,7 @@
     width: 100%;
     padding-bottom: 76px;
 }
-.swiper-horizontal > .swiper-pagination-bullets{
+.swiper--about-us > .swiper-pagination-bullets{
     bottom: 23px;
     transform: translateX(7px);
 }
