--- a/scss/pages/main/_main_swiper.scss
+++ b/scss/pages/main/_main_swiper.scss
@@ -42,5 +42,8 @@
     width: 16px;
     height: 16px;
     margin-right: 15px;
-    color: $active-regular;
+    background-color: rgba($active-regular, 0.7);
+}
+.swiper-pagination-horizontal.swiper-pagination-bullets .swiper-pagination-bullet-active{
+    background-color: $active-active;
 }
