--- a/scss/pages/services-inner/_services-inner_service.scss
+++ b/scss/pages/services-inner/_services-inner_service.scss
@@ -33,8 +33,9 @@
         margin-top: 30px;
     }
     &__list{
-        display: flex;
-        flex-wrap: wrap;
+/*      display: flex;
+        flex-wrap: wrap; */
+        column-count: 2;
         justify-content: space-between;
         list-style-type: disc;
         list-style-position: inside;
