--- a/scss/_graphics.scss
+++ b/scss/_graphics.scss
@@ -35,3 +35,31 @@
     border-radius: 50%;
     background-color: $bg-alt;
 }
+@mixin shaked{
+	animation-name: shaked-animation;
+	animation-duration: 0.2s;
+	animation-timing-function: ease-in-out;
+}
+@keyframes shaked-animation{
+    10%{
+        transform: translateY(8px);
+    }
+    25%{
+        transform: translateY(-8px);
+    }
+    40%{
+        transform: translateY(5px);
+    }
+    55%{
+        transform: translateY(-5px);
+    }
+    70%{
+        transform:translateY(3px)
+    }
+    85%{
+        transform:translateY(-3px)
+    }
+    100%{
+        transform:translateY(0px)
+    }
+}
