--- a/scss/pages/main/_main_companies.scss
+++ b/scss/pages/main/_main_companies.scss
@@ -57,6 +57,10 @@
         }
     }
     &__img{
-        
+        transition: all 0.2s ease-out;
+        cursor: pointer;
+    }
+    &__img:hover{
+        transform: scale(1.1);        
     }
 }
