--- a/scss/style.scss
+++ b/scss/style.scss
@@ -32,3 +32,4 @@
 @import "pages/services-inner/_services-inner_service";
 @import "pages/services-inner/_services-inner_publications";
 @import "pages/services-inner/_services-inner_popup";
+@import "pages/main/_main_media";
