--- a/scss/global/_header.scss
+++ b/scss/global/_header.scss
@@ -10,6 +10,9 @@
         display: flex;
         //align-items: center;
     }
+    &__logo-inner{
+        display: none;
+    }
     &__logo-svg{
         width: 130px;
         height: 60px;
